src/objects/ADvendio__BlockedPlacementAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__BlockedPlacement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Blocked Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Blocked Placements (Blocked Placement)</relationshipLabel>
        <relationshipName>BlockedPlacementAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Factor__c</fullName>
        <inlineHelpText>The master placement blocks this many instances of the blocked placement.</inlineHelpText>
        <label>Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MasterPlacement__c</fullName>
        <label>Master Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Master Placements</relationshipLabel>
        <relationshipName>MasterPlacementAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Blocked Placement</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Blocked Placement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>